tests/syntax_error/typedef_c_syntax.jou
typedef int MyInt  # Error: expected the name for a type, got the 'int' keyword
